--- a/SingleCourseWebApp/homepage/app/(legal)/imprint/page.mdx
+++ b/SingleCourseWebApp/homepage/app/(legal)/imprint/page.mdx
@@ -1,5 +1,7 @@
 # Impressum
 
+Die folgende Website ist das Ergebnis des Databrix-Forschungsprojekts, welches innerhalb des Studiengangs Wirtschaftsingenieurwesen, DHBW Stuttgart, in Kooperation mit der Firma Votan Enterprise und gefördert durch InvestBW stattfindet. Mehr zum Forschungsprojekt sowie dem Forschungsträger erfahren Sie auf folgender Projektseite: [https://www.dhbw-stuttgart.de/forschung-transfer/technik/projekte/databrix/](https://www.dhbw-stuttgart.de/forschung-transfer/technik/projekte/databrix/)
+
 ## Angaben gemäß § 5 TMG
 
 Votan Enterprise UG (haftungsbeschraenkt)
